[package]
name = "luhnoxide"
version = "1.0.1"
edition = "2024"
authors = ["Dr. Xenith QuantumWeather<xenith@glorvo.com>"]
description = "A tool to identify valid credit card numbers in files using the Luhn algorithm"

[dependencies]
clap = "2.33"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
chrono = "0.4"
